add code quality testing to pom
Signed-off-by: Nick Mancuso <nmancus1@dtcc.edu>